# git-cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  LICENSE  README.md  build.sh  run.sh  test.sh
.github/workflows/: ci.yml
.zed/: settings.json
app/: CMakeLists.txt  adder_app.cpp  gyt.cpp
doc/: Could not compile C.md  User Guide.md  cat-file.md  commits.md  index files.md  init.md  tree.md
doc/case studies/: Discards qualifiers.md  Optimising binary size.md  Optimising compile time.md  Singleton.md  Trying to get Instruments to work.md
doc/commands/: branches.md  cat-file.md  checkout.md  hash-object.md  init.md  log.md  show-ref.md
include/: blob.h  commit.h  index.h  index_entry.h  object.h  repository.h  tree.h  util.h
include/commands/: cat-file.h  checkout.h  hash-object.h  init.h  log.h  ls-files.h  ls-tree.h  show-ref.h  tag.h
include/inih/: INIReader.h  inih.h
include/parsers/: CatfileParser.h  CheckoutParser.h  HashObjectParser.h  TagParser.h
include/tclap/: ArgException.h  ArgTraits.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  Visitor.h  XorHandler.h
src/: CMakeLists.txt  blob.cpp  cat-file.cpp  checkout.cpp  commit.cpp  hash-object.cpp  index.cpp  index_entry.cpp  inih.c  inih.cpp  init.cpp  log.cpp  ls-tree.cpp  object.cpp  repository.cpp  tree.cpp  util.cpp
src/commands/: cat-file.cpp  checkout.cpp  hash-object.cpp  log.cpp  ls-files.cpp  ls-tree.cpp  show-ref.cpp  tag.cpp
src/parsers/: CatfileParser.cpp  CheckoutParser.cpp  HashObjectParser.cpp  TagParser.cpp
tests/: CMakeLists.txt  cat-file_t.cpp  checkout_t.cpp  compile_commands.json  gitreposetup.cpp  hash-object_t.cpp  ls-tree_t.cpp  object_t.cpp  repository_t.cpp  tag_t.cpp  tests
tests/gitrepo/.notgit/: COMMIT_EDITMSG  index
tests/gitrepo/.notgit/logs/: HEAD
tests/gitrepo/.notgit/logs/refs/heads/: test_branch
tests/gitrepo/.notgit/refs/heads/: main  test_branch
tests/utils/: gitreposetup.cpp  gitreposetup.h  test_helpers.h
